--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Tic Tac Toe Online</string>
+    <string name="game_not_started">Game not started</string>
+    <string name="start_game">Start game</string>
 </resources>
